part1/exer1.10/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: exer-1-10-svc
spec:
  type: ClusterIP
  selector:
    app: exer-1-10
  ports:
    - port: 2348
      protocol: TCP
      targetPort: 8080
